@@ -20,4 +20,13 @@ SET(settings_STAT_SRCS
 
 QT4_AUTOMOC(${settings_STAT_SRCS})
 
+IF (WIN32 OR USE_BINARY_PACKAGES)
+	SET_PROPERTY (
+		SOURCE rksettingsmoduler.cpp
+		APPEND
+		PROPERTY COMPILE_DEFINITIONS
+		USE_BINARY_PACKAGES=1
+	)
+ENDIF (WIN32 OR USE_BINARY_PACKAGES)
+
 ADD_LIBRARY(settings STATIC ${settings_STAT_SRCS})
